# Restore__3d_model_from_pics_2d_multiple_images

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
assets/misc/: scanner-construction.skp
assets/squirrel/: K.xml  dist.xml  viff.xml
assets/squirrel-lighted/: K.xml  dist.xml  viff.xml
cmake/: CodeCoverage.cmake  CxxFlags.cmake  code_coverage.cmake  compiler_flags.cmake  compiler_options.cmake  documentation_targets.cmake  dynamic_analyzer_options.cmake  ide_project_layout.cmake  macros.cmake  options.cmake  versions.cmake
doc/: restore-logo.ai
doc/themes/metro/: customdoxygen.css
include/restore/: calibration.hpp  common.hpp  filtering.hpp  io.hpp  math.hpp  rendering.hpp  types.hpp
perf/: CMakeLists.txt
perf/rendering/: voxel_carving_perf.cpp
src/: CMakeLists.txt  main.cxx
src/calibration/: CMakeLists.txt  light_direction_model.hpp  ransac.cpp  ransac.hpp
src/common/: CMakeLists.txt  camera.hpp  camera_extrinsics.hpp  camera_intrinsics.hpp  dataset.hpp  polydata.hpp  utils.hpp
src/common/types/: triangle.hpp  vec3f.hpp
src/filtering/: CMakeLists.txt  segmentation.cpp  segmentation.hpp
src/gui/: dataset_list_widget_item.cpp  dataset_list_widget_item.hpp  main_window.cpp  main_window.hpp  model_widget.cpp  model_widget.hpp
src/io/: CMakeLists.txt  assets_path.hpp.in.cmake  dataset_reader.cpp  dataset_reader.hpp
src/math/: CMakeLists.txt  dual_quaternion.cpp  dual_quaternion.hpp  math_utils.hpp  quaternion.cpp  quaternion.hpp  quaternion.tpp  utils.hpp
src/rendering/: CMakeLists.txt  bounding_box.cpp  bounding_box.hpp  cv_utils.hpp  light_dir_estimation.cpp  light_dir_estimation.hpp  mesh_coloring.cpp  mesh_coloring.hpp  mesh_refinement.cpp  mesh_refinement.hpp  voxel_carving.cpp  voxel_carving.hpp  vtk_utils.hpp
src/rendering/mc/: basedef.hpp  lookup.cpp  lookup.hpp  marching_cubes.cpp  marching_cubes.hpp  marching_cubes.inl  triangle.hpp  vec3f.hpp
test/: CMakeLists.txt  camera_extrinsics_test.cpp  camera_intrinsics_test.cpp  camera_test.cpp  dataset_reader_test.cpp  dataset_test.cpp  dual_quaternion_test.cpp  light_direction_model_test.cpp  polydata_test.cpp  quaternion_test.cpp  ransac_test.cpp  sanity_check.cpp  segmentation_test.cpp  utils_test.cpp  voxel_carving_test.cpp
test/calib/: light_direction_model_test.cpp  ransac_test.cpp
test/common/: camera_extrinsics_test.cpp  camera_intrinsics_test.cpp  camera_test.cpp  dataset_test.cpp  polydata_test.cpp  utils_test.cpp.cpp
test/filtering/: segmentation_test.cpp
test/io/: dataset_reader_test.cpp
test/math/: dual_quaternion_test.cpp  quaternion_test.cpp  utils_test.cpp
test/rendering/: voxel_carving_test.cpp
tools/: CMakeLists.txt
tools/light-directions/: main.cpp
tools/scripts/: boilerplate.py  sort_includes.py
tools/show-cameras/: main.cpp
