# Set compiler specific extra flags
IF(COVERAGE_AVAILABLE)
    INCLUDE(CxxFlags)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
ENDIF()

SET(PROJECT_LIBS ${OpenCV_LIBS} ${Boost_LIBRARIES} ${VTK_LIBRARIES})
SET(PROJECT_BIN ${PROJECT_NAME})

# Configure path to assets
SET(ASSETS_PATH "${PROJECT_SOURCE_DIR}/assets")
FILE(GLOB_RECURSE CONFIGINPUTS "${PROJECT_SOURCE_DIR}/src/*.hpp.in.cmake")
FOREACH(INPUTS ${CONFIGINPUTS})
    STRING(REPLACE ".hpp.in.cmake" ".hpp" OUTPUTS "${INPUTS}")
    CONFIGURE_FILE("${INPUTS}" "${OUTPUTS}")
ENDFOREACH()

ADD_EXECUTABLE(${PROJECT_BIN} 
    ${PROJECT_SOURCE_DIR}/src/main.cxx ${PROJECT_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_BIN} ${PROJECT_LIBS})
INSTALL(TARGETS ${PROJECT_BIN} DESTINATION bin)
