ADD_SUBDIRECTORY(calibration)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(filtering)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(rendering)

ADD_EXECUTABLE(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cxx)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
    ${OpenCV_LIBS}
    ${PROJECT_NAME}_calib
    ${PROJECT_NAME}_common 
    ${PROJECT_NAME}_filter
    ${PROJECT_NAME}_io
    ${PROJECT_NAME}_math
    ${PROJECT_NAME}_render)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CXX_STANDARD 11)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)
INSTALL(TARGETS ${PROJECT_BIN} DESTINATION bin)
