# Project tools binaries dir
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/tools/bin)

INCLUDE_DIRECTORIES(SYSTEM ${VTK_INCLUDE_DIRS})                                 
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS ${VTK_DEFINITIONS}) 

SET(LDIR_TARGET_NAME "light_directions")
ADD_EXECUTABLE(${LDIR_TARGET_NAME} 
    ${CMAKE_CURRENT_SOURCE_DIR}/light-directions/main.cpp)
ENABLE_CXX_11(${LDIR_TARGET_NAME})
TARGET_LINK_LIBRARIES(${LDIR_TARGET_NAME} ${RESTORE_LIB})

SET(CAMS_TARGET_NAME "show_cameras")
ADD_EXECUTABLE(${CAMS_TARGET_NAME}
    ${CMAKE_CURRENT_SOURCE_DIR}/show-cameras/main.cpp)
ENABLE_CXX_11(${CAMS_TARGET_NAME})
TARGET_LINK_LIBRARIES(${CAMS_TARGET_NAME} ${RESTORE_LIB})
