FILE(GLOB CALIB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

SET(TARGET_NAME "${PROJECT_NAME}_calib")
ADD_LIBRARY(${TARGET_NAME} SHARED ${CALIB_SOURCES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE ${OpenCV_LIBS})
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD 11)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)
