FILE(GLOB IO_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

SET(TARGET_NAME "${PROJECT_NAME}_io")
ADD_LIBRARY(${TARGET_NAME} SHARED ${IO_SOURCES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE ${OpenCV_LIBS} ${Boost_LIBRARIES})
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD 11)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)

# Configure path to assets
SET(ASSETS_PATH "${PROJECT_SOURCE_DIR}/assets")
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/assets_path.hpp.in.cmake"
    "${CMAKE_CURRENT_SOURCE_DIR}/assets_path.hpp")
