FILE(GLOB_RECURSE RENDERING_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

SET(TARGET_NAME "${PROJECT_NAME}_render")
ADD_LIBRARY(${TARGET_NAME} SHARED ${RENDERING_SOURCES})
INCLUDE_DIRECTORIES(SYSTEM ${VTK_INCLUDE_DIRS})
SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS ${VTK_DEFINITIONS})

TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE ${OpenCV_LIBS} ${VTK_LIBRARIES}
    PUBLIC ${PROJECT_NAME}_calib ${PROJECT_NAME}_filter)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD 11)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)
